Point ArgoCD to a public repository to avoid the necessity of change the root URL

--- a/app/argocd/argoApp.yaml
+++ b/app/argocd/argoApp.yaml
@@ -10,7 +10,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   source:
     path: chart
-    repoURL: 'https://github.com/jdaniel-garcia/labster-test.git'
+    repoURL: 'https://github.com/jdaniel-garcia/sre-tech-assessment'
     targetRevision: HEAD
     helm:
       valueFiles:
